Refatorando o modulo responsavel pelo modelo Whisper